syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu.rodrigo";
option java_outer_classname = "PixKeyManager";
option objc_class_prefix = "HLW";

package br.com.zup.edu.rodrigo;
import "google/protobuf/timestamp.proto";

service PixKeyManagerRegistraGrpcService {
  rpc registra(RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service PixKeyManagerRemoveGrpcService {
  rpc remove(RemoveChavePixRequest) returns (RemoveChavePixResponse){}
}

service PixKeyManagerConsultaGrpcService {
  rpc consulta(ConsultaChavePixRequest) returns (ConsultaChavePixResponse){}
}

service PixKeyManagerListaGrpcService {
  rpc lista(ListaChavePixRequest) returns (ListaChavePixResponse){}
}

enum TipoChave {
  UNKNOW_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;

}

enum TipoConta {
  UNKNOW_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

/**
* Registra Chave Pix
 */

message RegistraChavePixRequest {
  string clienteId = 1;
  TipoChave tipoDeChave = 2;
  string chave = 3;
  TipoConta tipoDeConta = 4;
}

message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

/**
*Remove Chave Pix
*/

message RemoveChavePixRequest {
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

/**
*Consulta Chave Pix
*/

message ConsultaChavePixRequest {
  message FiltroPorPixId {
    string clienteId = 1;
    string pixId     = 2;
  }

  oneof filtro {
    FiltroPorPixId pixId  = 1;
    string chave          = 2;
  }
}

message ConsultaChavePixResponse {

  message ChavePix {

    message ContaInfo {
      TipoConta tipo     = 1;
      string instituicao   = 2; /** ITAU UNIBANCO */
      string nomeDoTitular = 3;
      string cpfDoTitular  = 4;
      string agencia       = 5;
      string numeroDaConta = 6;
    }

    TipoChave tipo        = 1;
    string chave            = 2;
    ContaInfo conta         = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string clienteId = 1;
  string pixId     = 2;
  ChavePix chave   = 3;
}

/**
 * Lista chaves Pix
 */
message ListaChavePixRequest {
  string clienteId = 1;
}

message ListaChavePixResponse {

  message ChavePix {
    string pixId            = 1;
    TipoChave tipo        = 2;
    string chave            = 3;
    TipoConta tipoDeConta = 4;
    google.protobuf.Timestamp criadaEm = 5;
  }

  string clienteId         = 1;
  repeated ChavePix chaves = 2;
}